Fix viewport sizing on mobile

--- a/shell/src/style.css
+++ b/shell/src/style.css
@@ -1,5 +1,5 @@
-body {
-	height: 100vh;
+html, body {
+	height: 100%;
 }
 
 p {
